--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,8 +2,16 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "./web/node_modules/.bin/astro dev",
+      "command": "./node_modules/.bin/astro dev",
+      "cwd": "${workspaceFolder}/web",
       "name": "Astro: Dev",
+      "request": "launch",
+      "type": "node-terminal"
+    },
+    {
+      "command": "./node_modules/.bin/sanity dev",
+      "cwd": "${workspaceFolder}/studio",
+      "name": "Sanity: Dev",
       "request": "launch",
       "type": "node-terminal"
     }
