--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,15 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@sanity/astro": "^3.1.3",
+    "@sanity/client": "^6.20.0",
+    "@sanity/visual-editing": "^2.1.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sanity": "^3.45.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
