--- a/studio/package.json
+++ b/studio/package.json
@@ -15,11 +15,13 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/dashboard": "^3.1.6",
     "@sanity/orderable-document-list": "^1.2.1",
     "@sanity/vision": "^3.45.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.45.0",
+    "sanity-plugin-dashboard-widget-vercel": "^2.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
