--- a/web/package.json
+++ b/web/package.json
@@ -24,5 +24,10 @@
     "sanity": "^3.45.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.3"
   }
 }
