--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.2",
     "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
