--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@phosphor-icons/react": "^2.1.6",
     "@sanity/astro": "^3.1.3",
     "@sanity/client": "^6.20.0",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/visual-editing": "^2.1.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
