--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@formspree/react": "^2.5.1",
     "@phosphor-icons/react": "^2.1.6",
     "@sanity/astro": "^3.1.3",
     "@sanity/client": "^6.20.0",
