--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@formspree/react": "^2.5.1",
     "@phosphor-icons/react": "^2.1.6",
+    "@portabletext/react": "^3.1.0",
     "@sanity/astro": "^3.1.3",
     "@sanity/client": "^6.20.0",
     "@sanity/image-url": "^1.0.2",
