--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-focus-on": "^3.9.3",
     "react-hot-toast": "^2.4.1",
     "sanity": "^3.45.0",
     "tailwindcss": "^3.4.4",
