--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.2",
     "@formspree/react": "^2.5.1",
     "@phosphor-icons/react": "^2.1.6",
     "@portabletext/react": "^3.1.0",
