--- a/web/package.json
+++ b/web/package.json
@@ -36,9 +36,6 @@
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.6.4",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-tailwindcss": "^0.6.3"
+    "@types/canvas-confetti": "^1.6.4"
   }
 }
