--- a/web/package.json
+++ b/web/package.json
@@ -29,8 +29,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-focus-on": "^3.9.3",
-    "react-hot-toast": "^2.4.1",
     "sanity": "^3.45.0",
+    "sonner": "^1.5.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "usehooks-ts": "^3.1.0"
