🔧 Web: Add config for i18n Ally extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "cSpell.words": ["hidpi"],
-  "css.lint.unknownAtRules": "ignore"
+  "css.lint.unknownAtRules": "ignore",
+  "i18n-ally.localesPaths": ["web/src/assets/locales"],
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.localeCountryMap": {
+    "en": "gb", // show UK flag for 'en' locale
+    "sv": "se" // show Swedish flag for 'sv' locale
+  }
 }
