--- a/studio/package.json
+++ b/studio/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/dashboard": "^3.1.6",
+    "@sanity/document-internationalization": "^3.0.0",
     "@sanity/orderable-document-list": "^1.2.1",
     "@sanity/vision": "^3.45.0",
     "react": "^18.2.0",
