🔧 Web: Update VS Code extension recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,13 @@
 {
-  "recommendations": ["astro-build.astro-vscode"],
+  "recommendations": [
+    "astro-build.astro-vscode",
+    "bradlc.vscode-tailwindcss",
+    "mgmcdermott.vscode-language-babel",
+    "mikestead.dotenv",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "lokalise.i18n-ally",
+    "seatonjiang.gitmoji-vscode"
+  ],
   "unwantedRecommendations": []
 }
