--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "react-focus-on": "^3.9.3",
     "sanity": "^3.45.0",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "usehooks-ts": "^3.1.0"
