--- a/web/.env.example
+++ b/web/.env.example
@@ -1,5 +1,17 @@
+# Project ID and dataset found at https://www.sanity.io/manage
 SANITY_PROJECT_ID=
-SANITY_DATASET=
+SANITY_DATASET="production"
+
+# Dribbble access token is obtained by manually performing the OAuth flow,
+# see https://developer.dribbble.com/v2/oauth/
 DRIBBBLE_ACCESS_TOKEN=
+
+# Since SoundCloud's API is closed for new app registrations, use the client ID
+# of the public web app by inspecting network requests on https://soundcloud.com
+SOUNDCLOUD_CLIENT_ID=
+
+# Form ID found at https://formspree.io/forms/
 PUBLIC_FORMSPREE_ID=
-PUBLIC_LOCALE=
+
+# Language code 'en' or 'sv'
+PUBLIC_LOCALE="en"
