--- a/web/package.json
+++ b/web/package.json
@@ -17,10 +17,14 @@
     "@formspree/react": "^2.5.1",
     "@phosphor-icons/react": "^2.1.6",
     "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@sanity/astro": "^3.1.3",
     "@sanity/client": "^6.20.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/visual-editing": "^2.1.4",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.12.2",
@@ -33,6 +37,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
+    "tone": "^15.0.4",
     "typescript": "^5.4.5",
     "usehooks-ts": "^3.1.0"
   },
